[workspace]
members = [
  "contracts/governance-token",
  "contracts/principle-token",
  "contracts/yield-token",
  "contracts/yield-bearing-token",
  "packages/*"
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
