[workspace]
members = [
  "contracts/mars-adapter",
  "contracts/splitter",
  "contracts/market",
  "contracts/pair",
  "contracts/pair_stable",
  "contracts/token",
  "contracts/factory",
  "contracts/periphery/*",
  "packages/*"
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
